<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:background="@color/white">

    <!-- Login TextView -->
    <TextView
        android:id="@+id/HomePageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/homepage"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginVertical="32dp"
        android:gravity="center" />

    <!-- Homepage TextView -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginStart="5dp"/>
        <TextView
            android:id="@+id/usernameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="14sp"
            android:textColor="@color/blue"
            android:gravity="center"
            android:layout_marginStart="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/youremail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginStart="5dp"/>
        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="14sp"
            android:textColor="@color/blue"
            android:gravity="center"
            android:layout_marginStart="5dp"/>
        <TextView
            android:id="@+id/emailstatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_homepage"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginStart="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/yourphone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginStart="5dp"/>
        <TextView
            android:id="@+id/phoneTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textSize="14sp"
            android:textColor="@color/blue"
            android:gravity="center"
            android:layout_marginStart="5dp"/>
        <TextView
            android:id="@+id/phonestatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_homepage"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginStart="5dp"/>
    </LinearLayout>
    <Button
        android:id="@+id/logoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:background="@drawable/rounder_background_blue"
        android:layout_marginTop="72dp"/>

</LinearLayout>
