<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:background="@color/white"
    tools:context=".MainActivity">

    <!-- Login TextView -->
    <TextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="36sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginVertical="32dp"
        android:gravity="center" />

    <!-- Username EditText -->
    <EditText
        android:autofillHints="username"
        android:id="@+id/usernameEditText"
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:padding="12dp"
        android:inputType="text"
        android:background="@drawable/rounder_background"
        android:layout_marginBottom="16dp" />

    <!-- Password EditText -->
    <EditText
        android:autofillHints="password"
        android:id="@+id/passwordLoginText"
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:padding="12dp"
        android:inputType="textPassword"
        android:background="@drawable/rounder_background"
        android:layout_marginBottom="32dp"/>

    <RelativeLayout
        android:id="@+id/linear_atas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentStart="true">

            <ImageView
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAccessibility="no"
                android:src="@drawable/baseline_check_box_outline_blank_24" />

            <TextView
                android:id="@+id/remember_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/remember_me"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:text="@string/forgot_password"
            android:textColor="@color/blue"
            android:textSize="12sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <!-- Login Button -->
    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/white"
        android:background="@drawable/rounder_background_blue"
        android:layout_marginTop="72dp"/>

    <!-- Register TextView -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_member"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:gravity="center" />
        <TextView
            android:id="@+id/registerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg"
            android:textSize="14sp"
            android:textColor="@color/blue"
            android:gravity="center"
            android:layout_marginStart="5dp"/>
    </LinearLayout>


</LinearLayout>
