<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:background="@color/white">

    <!-- Register TextView -->
    <TextView
        android:id="@+id/RegisterText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg"
        android:textSize="36sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginVertical="32dp"
        android:gravity="center" />

    <!-- Username EditText -->
    <LinearLayout
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounder_background">
        <ImageView
            android:id="@+id/iconUsername"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/baseline_person_24" />
        <EditText
            android:autofillHints="username"
            android:id="@+id/usernameEditText"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:padding="12dp"
            android:inputType="text"
            android:background="@null"/>
    </LinearLayout>

    <!-- Email EditText -->
    <LinearLayout
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounder_background">
        <ImageView
            android:id="@+id/iconEmail"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/baseline_email_24" />
        <EditText
            android:autofillHints="email"
            android:id="@+id/emailEditText"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:padding="12dp"
            android:inputType="text"
            android:background="@null"/>
    </LinearLayout>

    <!-- Phone EditText -->
    <LinearLayout
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounder_background">
        <ImageView
            android:id="@+id/iconPhone"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/baseline_local_phone_24"/>
        <EditText
            android:autofillHints="phone"
            android:id="@+id/phoneEditText"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:padding="12dp"
            android:inputType="text"
            android:background="@null"/>
    </LinearLayout>

    <!-- Password EditText -->
    <LinearLayout
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounder_background">
        <ImageView
            android:id="@+id/iconPassword"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/baseline_lock_24"/>
        <EditText
            android:autofillHints="phone"
            android:id="@+id/passwordEditText"
            android:layout_width="270sp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:padding="12dp"
            android:inputType="text"
            android:background="@null"/>
        <ImageView
            android:id="@+id/iconPasswordEnd"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/baseline_visibility_off_24"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:src="@drawable/baseline_check_box_outline_blank_24" />

        <TextView
            android:id="@+id/checkbox_reg1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/checkbox_reg1"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/checkbox_reg2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/checkbox_reg2"
            android:textColor="@color/blue"
            android:textSize="12sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/checkbox_reg3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/checkbox_reg3"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/checkbox_reg4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/checkbox_reg4"
            android:textColor="@color/blue"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- Login Button -->
    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reg"
        android:textColor="@color/white"
        android:background="@drawable/rounder_background_blue"
        android:layout_marginTop="72dp"/>

    <!-- Register TextView -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/registertoLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_to_login"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginStart="5dp"/>
        <TextView
            android:id="@+id/loginTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="14sp"
            android:textColor="@color/blue"
            android:gravity="center"
            android:layout_marginStart="5dp"/>
    </LinearLayout>


</LinearLayout>
